# Potholes

./: CMakeLists.txt  Readme.md  Specification  Transformations
benchmarks/: CMakeLists.txt  benchmarks  polybench-c-3.2.tar
docs/: tasks
examples/: image_access.c  image_access.h  image_access.h.gch  sob.c  sobel
nbproject/: Package-Default.bash  configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
scripts/: CMakeLists.txt  Readme  analysis.tcl  loadPackage.tcl  pkgIndex.tcl  potholes.tcl  preparePackage.tcl  project.tcl  scop.tcl  testPackage.tcl
src/: CMakeLists.txt  affine.cxx  analysis.cxx  ast.cxx  consumer.cxx  extract.cxx  generate.cxx  main.cxx  map.cpp  options.c  parallel.cxx  potholes-promote-functions.cxx  potholes.cxx  process.cxx  project.cxx  promote.cxx  region.cxx  rewrite.cxx  scop.cxx  set.cpp  statement.cxx  transform.cxx  visitor.cxx
src/graph/: CMakeLists.txt  Doxyfile  ReferenceCountedObject.cpp  Test.cpp  Test2.cpp  VerilogContext.cpp  VerilogExpression.cpp  VerilogMap.cpp  VerilogModule.cpp  VerilogSymbol.cpp  VerilogValue.cpp  VerilogValue.h  context  domain  domain2
src/graph/NewAPI/: Example
src/graph/test/: test.cpp
src/gravel/: CMakeLists.txt  ReferenceCountedObject.cpp
src/gravel/include/gravel/: ReferenceCountedObject.h  VerilogSymbol.h
src/gravel/test/: CMakeLists.txt  Test.cpp
src/include/: options.h
src/include/potholes/: Initialization.h  affine.h  analysis.h  ast.h  consumer.h  extract.h  function.h  generate.h  lexicographic.h  map.h  options.h  parallel.h  parameters.h  process.h  project.h  region.h  register.h  relation.h  rewrite.h  scop.h  set.h  statement.h  tclBackedObject.h  transform.h  visitor.h
